Fix titlebox spacing on config pages
As we updated spacing in 4.6/fix-inconsistent-ticket-display-spacing,
it's good to keep it consistent on config pages too.

--- a/share/static/css/elevator-light/admin.css
+++ b/share/static/css/elevator-light/admin.css
@@ -206,6 +206,11 @@ div.inline-row i {
 .configuration .tab-content .tab-content {
     padding-top: 0;
 }
-.configuration .card.titlebox {
+
+.configuration .tab-content .card.titlebox {
     margin-top: 0;
+}
+
+.configuration > .titlebox-content {
+    margin-top: 20px;
 }
